--- a/css/starbg.css
+++ b/css/starbg.css
@@ -22,7 +22,7 @@
         radial-gradient(2px 2px at 70% 40%, white, transparent),
         radial-gradient(1.5px 1.5px at 50% 10%, white, transparent);
     background-repeat: repeat;
-    background-size: 200px 200px;
+    background-size: 300px 300px;
     animation: moveStars 60s linear infinite, twinkle 4s infinite alternate;
     z-index: 0;
 }
